# VisageDvachevsky-veil-windows-client

./: CLAUDE.md  GUI_AUDIT_REPORT.md  README.md  build_client.sh  install_client.sh  install_client.sh.sha256  install_veil.sh  install_veil.sh.sha256
.github/: dependabot.yml
.github/workflows/: build-installer.yml  ci.yml  codeql.yml  connection-test.yml  integration-tests.yml  linux-build.yml  network-emulation.yml  publish-installer-checksums.yml  release.yml  security-tests.yml  unit-tests.yml  windows-build.yml  windows-code-quality.yml
cmake/: ProjectOptions.cmake
configs/: veil-server.conf.example
docs/: CLIENT_VERIFICATION_REPORT.md  PERFORMANCE_ROADMAP.md  STARTUP_ARCHITECTURE_ANALYSIS.md  TECHNICAL_LIMITATIONS.md  UI_UX_ROADMAP.md  WORK_PLAN.md  protocol_wrappers.md  thread_model.md  windows-tls-setup.md
experiments/: AUTHENTICODE_VERIFICATION.md  CMakeLists.txt  retransmit_buffer_benchmark  retransmit_buffer_benchmark.cpp  test_ack_bitmap  test_ack_bitmap.cpp  test_ack_bitmap_fixed  test_ack_bitmap_fixed.cpp  test_base64_decode.sh  test_base64_decode2.sh  test_base64_decode3.sh  test_base64_decode_v2.sh  test_config_generation.sh  test_echo_base64.sh  test_fix.sh  test_fix_normal_case.sh  test_integrity_verification.sh  test_ip_pool_calculation.sh  test_key_display.sh  test_replay_dos_mitigation.cpp  test_replay_window.cpp  test_replay_window_detailed.cpp  test_replay_window_unmark.cpp
installer/: veil-vpn.nsi
scripts/: generate_client_config.sh
src/: CMakeLists.txt
src/client/: client_config.cpp
src/common/: constants.h  version.h
src/common/auth/: client_registry.cpp  client_registry.h
src/common/crypto/: crypto_engine.cpp  crypto_engine.h  hardware_crypto.cpp  hardware_crypto.h  hardware_features.cpp  hardware_features.h
src/common/gui/: error_message.h  theme.h
src/common/handshake/: handshake_processor.cpp  handshake_processor.h  session_ticket.cpp  session_ticket.h
src/common/ipc/: ipc_protocol.cpp  ipc_protocol.h  ipc_socket.h  ipc_socket_unix.cpp  ipc_socket_windows.cpp
src/common/obfuscation/: obfuscation_profile.cpp  obfuscation_profile.h
src/common/protocol_wrapper/: http_handshake_emulator.cpp  http_handshake_emulator.h
src/common/session/: replay_window.cpp  replay_window.h  session_rotator.cpp  session_rotator.h
src/common/updater/: auto_updater.cpp  auto_updater.h
src/common/utils/: packet_pool.cpp  packet_pool.h  spsc_queue.h  thread_checker.h  thread_pool.h
src/gui-client/: CMakeLists.txt  app_split_tunnel_widget.cpp  app_split_tunnel_widget.h  collapsible_section.cpp  collapsible_section.h  connection_state.h  connection_widget.cpp  connection_widget.h  data_usage_widget.cpp  data_usage_widget.h  diagnostics_widget.cpp  diagnostics_widget.h  ipc_client_manager.cpp  ipc_client_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  notification_history_dialog.cpp  notification_history_dialog.h  notification_preferences.cpp  notification_preferences.h  quick_actions_widget.cpp  quick_actions_widget.h  server_config.cpp  server_config.h  server_list_widget.cpp  server_list_widget.h  server_selector_widget.cpp  server_selector_widget.h  settings_widget.cpp  settings_widget.h  setup_wizard.cpp  setup_wizard.h  statistics_widget.cpp  statistics_widget.h  update_checker.cpp  update_checker.h  usage_tracker.cpp  usage_tracker.h
src/gui-client/resources/: resources.qrc
src/gui-server/: client_list_widget.cpp  main.cpp  server_status_widget.cpp
src/server/: main.cpp  server_config.cpp  server_config.h  session_table.cpp  session_table.h
src/transport/event_loop/: event_loop.h  event_loop_linux.cpp  event_loop_windows.cpp  threaded_event_loop.cpp  threaded_event_loop.h
src/transport/mux/: ack_bitmap.cpp  ack_scheduler.h  congestion_controller.cpp  congestion_controller.h  fragment_reassembly.h  frame.h  mux_codec.cpp  mux_codec.h  retransmit_buffer.cpp  retransmit_buffer.h
src/transport/pipeline/: pipeline_processor.cpp  pipeline_processor.h
src/transport/session/: transport_session.cpp  transport_session.h
src/transport/udp_socket/: udp_socket.cpp  udp_socket.h  udp_socket_linux.cpp  udp_socket_windows.cpp
src/tun/: routing.h  routing_linux.cpp  routing_windows.cpp  tun_device_windows.cpp
src/tunnel/: tunnel.cpp  tunnel.h
src/windows/: app_enumerator.cpp  app_enumerator.h  console_handler.cpp  console_handler.h  firewall_manager.cpp  firewall_manager.h  launcher_main.cpp  service_main.cpp  service_manager.cpp  service_manager.h  shortcut_manager.cpp
tests/: test_generate_client_config.sh
tests/integration/: CMakeLists.txt  tunnel_integration.cpp
tests/unit/: CMakeLists.txt  ack_bitmap_tests.cpp  ack_scheduler_tests.cpp  app_enumerator_tests.cpp  auto_updater_tests.cpp  client_registry_tests.cpp  congestion_controller_tests.cpp  connection_widget_tests.cpp  console_handler_tests.cpp  debug_logging_overhead_tests.cpp  error_message_tests.cpp  handshake_tests.cpp  hardware_crypto_tests.cpp  http_handshake_emulator_tests.cpp  ipc_client_manager_tests.cpp  ipc_protocol_tests.cpp  multi_client_handshake_tests.cpp  mux_codec_tests.cpp  packet_pool_tests.cpp  quick_actions_widget_tests.cpp  replay_window_tests.cpp  service_manager_tests.cpp  session_ticket_tests.cpp  settings_widget_tests.cpp  setup_wizard_tests.cpp  shortcut_manager_tests.cpp  spsc_queue_tests.cpp  statistics_widget_tests.cpp  thread_pool_tests.cpp  transport_session_tests.cpp  tunnel_stop_tests.cpp  udp_socket_tests.cpp  usage_tracker_tests.cpp  zero_rtt_handshake_tests.cpp
